# schc-demo-app

./: .gitignore  CMakeLists.txt  conanfile.txt  config.cmake
config/: log.conf
include/schc_demo_app/: cli_helper.h  logger_helper.h  utils.h
include/schc_demo_app/l2/: l2.h
include/schc_demo_app/l2/ext/: l2_ahoi_ext.h
include/schc_demo_app/net/: ipv6_udp_builder.h  ipv6_udp_coap_builder.h
include/schc_demo_app/services/: l2_service.h  schc_service.h  sensor_service.h
src/: CMakeLists.txt  cli_helper.c  ipv6_udp_builder.c  ipv6_udp_coap_builder.c  l2_ahoi_service.c  logger_helper.c  main.c  schc_service.c  sensor_service.c  utils.c
